# testc

./: .gitignore  CMakeLists.txt  a  add-input.c  add.c  client  client.c  main  main.c  main.c++  server  server.c  single.c  sort.c  sort.h  sort_recursive.c  sort_recursive.h  static_main_c++
demo/: b.c
semaphore/: main.c
test/: CMakeLists.txt  hello.c  main  main.cpp
test2/: CMakeLists.txt  main.cpp
test2/hello/: CMakeLists.txt  hello.cpp  hello.h
test2/world/: CMakeLists.txt  world.cpp  world.h
